kytos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kytos-deployment
  labels:
    app: kytos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kytos
  template:
    metadata:
      labels:
        app: kytos
    spec:
      containers:
      - name: kytos
        image: amlight/kytos:latest
        ports:
        - containerPort: 8181
        - containerPort: 6653
---
apiVersion: v1
kind: Service
metadata:
  name: kytos-api-service
spec:
  type: NodePort
  selector:
    app: kytos
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8181
---
apiVersion: v1
kind: Service
metadata:
  name: kytos-openflow-service
spec:
  type: ClusterIP
  selector:
    app: kytos
  ports:
    - protocol: TCP
      port: 6653
      targetPort: 6653
